--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "dva-loading": "^2.0.3",
     "dva-model-extend": "^0.1.2",
     "nprogress": "^0.2.0",
+    "prop-types": "latest",
     "rc-form": "^2.2.1",
     "rc-util": "4.5.1",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dom": "^16.2.0",
-    "weixin-js-sdk": "^1.3.3",
     "react-fastclick": "^3.0.2",
-    "styled-components": "^3.3.3"
+    "react-transition-group": "^2.4.0",
+    "styled-components": "^3.3.3",
+    "weixin-js-sdk": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.3",
