--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dva-immer": "^0.2.1",
     "dva-loading": "^2.0.3",
     "dva-model-extend": "^0.1.2",
+    "fastclick": "^1.0.6",
     "nprogress": "^0.2.0",
     "prop-types": "latest",
     "rc-form": "^2.2.1",
@@ -27,7 +28,6 @@
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dom": "^16.2.0",
-    "react-fastclick": "^3.0.2",
     "react-transition-group": "^2.4.0",
     "styled-components": "^3.3.3",
     "weixin-js-sdk": "^1.3.3"
